Change nav menu color and fix collapse.

--- a/Implementation/innerworkscounselling.com.au (full)/assets/css/custom.css
+++ b/Implementation/innerworkscounselling.com.au (full)/assets/css/custom.css
@@ -36,7 +36,7 @@ a:focus {
     font-size: calc(1.2rem + 0.4vw);
     font-weight: 600;
     text-align: center;
-    color: white;
+    color: #b0e5ed;
 }
 .iwc-nav-link:focus, .iwc-nav-link:hover, .navbar-toggler:focus, .navbar-toggler:hover {
     color: #0c49a4;
